--- a/package/jswasi/config.json
+++ b/package/jswasi/config.json
@@ -1,5 +1,6 @@
 {
-  "init": ["/usr/bin/wash", "/usr/bin/init.sh"],
+  "init": "/usr/bin/wasibox",
+  "initArgs": ["init"],
   "rootfs": "./resources/rootfs.tar.gz",
   "mountConfig": {
     "fsType": "fsa",
